2008-04-03  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * data/cairo-compmgr.schemas.in: set native_pixmap_bind as default.
    
    * plugins/mosaic/ccm-mosaic.c: Don't clip on draw mosaic.
    
    * plugins/shadow/ccm-shadow.c: Use image surface instead similar to draw
                                   shadow.

    * src/ccm-pixmap-glitz.c: Attach to back buffer instead front.
    
    * src/ccm-screen.c:
    * src/ccm-window.c: Send signal property changed and state changed only if
                        really changed and then restack only in this case.

2008-03-31  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-pixmap-buffered-image.c:
    * src/ccm-window.c: Bufferize only on move.
    
    * configure.ac: Ignore CFLAGS passed on command line.
    
    * plugins/magnifier/ccm-magnifier.c:
    * plugins/mosaic/ccm-mosaic.c:
    * plugins/opacity/ccm-opacity.c:
    * plugins/perf/ccm-perf.c:
    * src/ccm-image.c:
    * src/ccm-pixmap-backend.c:
    * src/ccm-pixmap-image.c:
    * src/ccm-screen.c:
    * src/ccm-window.c: Fixes some warnings.

2008-03-27  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-window.c:
    * src/ccm-screen.c: Fix restack issues for transient window.

2008-03-25  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/async-getprop.c:
    * src/async-getprop.h: Don't free task on get reply.
    
    * src/ccm-display.c:
    * src/ccm-display.h: Use signal instead callback on ag_task reply.
    
    * src/ccm-window.c:
    * src/ccm-window.h:
    * src/ccm.h: Add get transient for, get group leader and keep_above/below
                 interface.
    
    * src/ccm-screen.c: Restack rework to be more conformant to EWMH.

    * plugins/mosaic/ccm-mosaic.c:
    * plugins/opacity/ccm-opacity.c:
    * plugins/shadow/ccm-shadow.c: Change policy to filter window with new 
                                   property check.    

2008-03-22  Nicolas Bruguier  <gandalfn@club-internet.fr>
