@@ -91,6 +91,7 @@ struct _CCMWindow
 	
 	gboolean 		  is_viewable;
 	gboolean 		  is_input_only;
+	CCMStackLayer	  layer;
 	
 	CCMRegion*		  opaque;
 	
